--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "@babel/plugin-transform-typescript": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@commitlint/config-angular": "^16.2.1",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.19",
     "@types/validator": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "commitlint": "^16.2.1",
     "eslint": "^8.6.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.4",
