--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "test:jest": "jest",
-    "test:tsc": "tsc --noEmit",
+    "test:tsc": "tsc --noEmit -p tsconfig.json && tsc --noEmit -p tsconfig-cjs.json",
     "test": "npm run test:tsc && npm run test:jest",
     "prebuild": "npm run test:jest",
     "build:esm": "tsc -p tsconfig.json",
