feat: separate package scripts

--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "test:jest": "jest",
-    "test:tsc": "tsc --noEmit -p tsconfig.json && tsc --noEmit -p tsconfig-cjs.json",
+    "test:esm": "tsc --noEmit -p tsconfig.json",
+    "test:cjs": "tsc --noEmit -p tsconfig-cjs.json",
+    "test:tsc": "npm run test:esm && npm run test:cjs",
     "test": "npm run test:tsc && npm run test:jest",
     "prebuild": "npm run test:jest",
     "build:esm": "tsc -p tsconfig.json",
     "build:cjs": "tsc -p tsconfig-cjs.json",
-    "build": "rimraf dist/ && npm run build:esm && npm run build:cjs",
+    "build:tsc": "npm run build:esm && npm run build:cjs",
+    "build": "rimraf dist/ && npm run build:tsc",
     "prepublish": "npm run build",
     "prepare": "husky install"
   },
