--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4"
   },
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esc/index.js",
   "exports": {
     ".": {
       "require": "./dist/cjs/index.js",
