--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "moduleResolution": "node",
     "module": "ES2020",
     "target": "ES2019",
-    "lib": ["esnext", "esnext.array", "esnext.asynciterable", "esnext.intl", "esnext.symbol"],
+    "lib": ["esnext", "esnext.asynciterable", "esnext.intl", "esnext.symbol"],
     "sourceMap": false,
     "inlineSourceMap": false,
     "inlineSources": false,
